# HPC-Unittest-example

./: .gitignore  CMakeLists.txt  README.md
libMyCalc/: CMakeLists.txt  mycalc.cpp  mycalc.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test-fortran/: CMakeLists.txt  build_pfunit_from_source.cmake  pfunit-CMakeLists.txt.in  square.F90  test_square.pf
